--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a class="logo" href="/"><span>Loans.com</span></a>
-            <div class="header__burger">
+            <div class="header__burger"> <!--klasa do uruchomienia menu w stylu "burger" po zwinięciu okna przeglądarki-->
                 <span></span>
             </div>
             <div class="header__menu">
