dodano dodatkowe strony, skrypt wczytujcy dane formy

--- a/how_to_apply.html
+++ b/how_to_apply.html
@@ -29,36 +29,31 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <div class="intro__info">
-                <span>Personal Leans</span>
-                <h1>Put your plans into action.</h1>
-                <section class="intro__info-icons">
-                    <span class="span-first">Online application</span>
-                    <span class="span-sec">Up to 50.000$</span>
-                    <span class="span-third">The money is yours in 48h</span>
-                </section>
-            </div>
+        <div class="container_how_to_apply">
+            <div class="wrapper">
+            <h1> Simply just fill the form and we will send info to your email!</h1>
+            <div class="form_div">
             <form class="form" id="form_id" type = "submit" action="/index.html">
-                    <h2 for="HowMuch">Let's change your life!</h2>
-                    <label for="fname">First Name</label>
-                    <input class="input" type="text" id="fname" name="Firstname" required>
-                    <label for="Email">Email</label>
-                    <input class="input" type="text" id="Email" name="Email" required> 
-                    <div class="how_much">
-                        <p class="amount" for="amount">How much do you want?</p>
-                        <div class="slidecontainer">
-                            <input type="range" min="50" max="50000" value="0" class="slider" id="myRange">
-                            <p id="value"></p>
-                        </div>
+                <h2 for="HowMuch">Let's change your life!</h2>
+                <label for="fname">First Name</label>
+                <input class="input" type="text" id="fname" name="Firstname" required>
+                <label for="Email">Email</label>
+                <input class="input" type="text" id="Email" name="Email" required> 
+                <div class="how_much">
+                    <p class="amount" for="amount">How much do you want?</p>
+                    <div class="slidecontainer">
+                        <input type="range" min="50" max="50000" value="0" class="slider" id="myRange">
+                        <p id="value"></p>
                     </div>
-                    <button id="button" type="submit"  class="btn button__submit"><span>Check your Rates!</span></button>
-            </form>
+                </div>
+                <button id="button" type="submit"  class="btn button__submit"><span>Check your Rates!</span></button>
+        </form>
+        </div>>
+        </div>>
         </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/form.js"></script>
-</body>
-</html>
+</body>>
