--- a/how_to_apply.html
+++ b/how_to_apply.html
@@ -48,12 +48,26 @@
                 </div>
                 <button id="button" type="submit"  class="btn button__submit"><span>Check your Rates!</span></button>
         </form>
-        </div>>
-        </div>>
         </div>
+        </div>
+        </div>
+
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <div class="modal-text">
+                    <p>info was sent to your email!</p>
+                  </div>
+            <button class="btn btn-close">
+              <span class="close">&times;</span>
+            </button>
+            </div>
+          
+          </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/form.js"></script>
-</body>>
+</body>
