--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
                     <button id="button" type="submit"  class="btn button__submit"><span>Check your Rates!</span></button>
             </form>
         </div>
+
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <div class="modal-text">
+                    <p>info was sent to your email!</p>
+                  </div>
+            <button class="btn btn-close">
+              <span class="close">&times;</span>
+            </button>
+            </div>
+          
+          </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/js/app.js"></script>
