--- a/how_to_apply.html
+++ b/how_to_apply.html
@@ -35,6 +35,7 @@
             <div class="form_div">
             <form class="form" id="form_id" type = "submit" action="/index.html">
                 <h2 for="HowMuch">Let's change your life!</h2>
+                <h4 class="alert-fields">Please fill all the fields</h4>
                 <label for="fname">First Name</label>
                 <input class="input" type="text" id="fname" name="Firstname" required>
                 <label for="Email">Email</label>
@@ -56,12 +57,14 @@
 
             <!-- Modal content -->
             <div class="modal-content">
+                <div class="btn-wrapper">
+                    <button class="btn btn-close">
+                        <span class="close">&times;</span>
+                    </button>
+                    </div>
                 <div class="modal-text">
-                    <p>info was sent to your email!</p>
-                  </div>
-            <button class="btn btn-close">
-              <span class="close">&times;</span>
-            </button>
+                    <h3>info was sent to your email!</h3>
+                </div>
             </div>
           
           </div>
