--- a/how_to_apply.html
+++ b/how_to_apply.html
@@ -70,7 +70,7 @@
           </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/form.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/form.js"></script>
 </body>
