--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/form.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/form.js"></script>
 </body>
 </html>
